--- a/Games.html
+++ b/Games.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,88 +9,89 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    </head>
-	<style>
-		.center p {
-			color: #ffffff;
-			font-weight: 400;
-		}
-		#game_hero{
-			margin: -4px;
-		}
-		.nav_bullet_section{
-			text-align:center
-		}
-		@media screen and (max-width:576px) {
-			.hero_txt{
-				top: 25%;
+		<style>
+			.center p {
+				color: #ffffff;
+				font-weight: 400;
 			}
-			.hero_txt h1{
-				font-size: 25px;
-			}
-			.hero_txt p{
-				font-size: 12px;
-			}
-			.show{
-				width:70px;
-			}
-			.nav_bullet{
-				width: 28px;
-			}
-			.game_details{
-				padding: 0 2em;
-				margin: 0;
-			}
-			.game_des{
-				margin: 16em 1em 0;
-				background-color: rgba(0,0,0, 0.8);
-				flex-direction: column;
-			}
-			.game_des p{
-				font-size: 10px;
-			}
-			.game_des h3{
-				font-size: 20px;
-				margin-bottom: 5px;
-			}
-			.game_link{
-				margin: 0;
-			}
-			.game_link img{
-				width:85px
+			#game_hero{
+				margin: -4px;
 			}
 			.nav_bullet_section{
-				margin-bottom: 11em;
+				text-align:center
 			}
-			.legal{
-				flex-direction: column;
+			@media screen and (max-width:576px) {
+				.hero_txt{
+					top: 25%;
+				}
+				.hero_txt h1{
+					font-size: 25px;
+				}
+				.hero_txt p{
+					font-size: 12px;
+				}
+				.show{
+					width:70px;
+				}
+				.nav_bullet{
+					width: 28px;
+				}
+				.game_details{
+					padding: 0 2em;
+					margin: 0;
+				}
+				.game_des{
+					margin: 16em 1em 0;
+					background-color: rgba(0,0,0, 0.8);
+					flex-direction: column;
+				}
+				.game_des p{
+					font-size: 10px;
+				}
+				.game_des h3{
+					font-size: 20px;
+					margin-bottom: 5px;
+				}
+				.game_link{
+					margin: 0;
+				}
+				.game_link img{
+					width:85px
+				}
+				.nav_bullet_section{
+					margin-bottom: 11em;
+				}
+				.legal{
+					flex-direction: column;
+				}
+				.footer_nav_options{
+					align-items: start;
+					flex-direction: column;
+				}
+				.chat-button{
+					right: -150px;
+				}
+				.chat-button img{
+					width: 20%;
+				}
 			}
-			.footer_nav_options{
-				align-items: start;
-				flex-direction: column;
-			}
-			.chat-button{
-				right: -150px;
-			}
-			.chat-button img{
-				width: 20%;
-			}
-		}
-	</style>
+		</style>
+    </head>
+	
     <body>
         <header>
             <section class="nav_bar">
-				<a href="/index.html"><img src="images/supercell-logo-white-transp.png" alt="Supercell" width= "74"></a>
+				<a href="index.html"><img src="images/supercell-logo-white-transp.png" alt="Supercell" width= "74"></a>
 				<section class="header_nav_options" id="header_nav">
 					<a href="Games.html" class="header_options">Games</a>
 					<a href="Support.html" class="header_options">Support</a>
-					<a href="About Us.html"class="header_options">About Us</a>
-					<a href="Our Offices.html"class="header_options">Work With Us</a>
+					<a href="About Us.html" class="header_options">About Us</a>
+					<a href="Our Offices.html" class="header_options">Work With Us</a>
 
-					<a href="#https://creators.supercell.com/en" ><img src="images/creators.png" alt="Supercell"  width= "36px" id="section_divider"></a>
-					<a href="#https://make.supercell.com/en/"><img src="images/make.png" alt="Supercell" width= "36px"></a>
-					<a href="Sign In.html"><img src="images/id.png" alt="Supercell ID" width= "36px"></a>
-					<a style="margin-top: 5px;"><img src="images/search.png" alt="search" width= "20px"></a>
+					<a href="#https://creators.supercell.com/en" ><img src="images/creators.png" alt="Supercell"  width= "36" id="section_divider"></a>
+					<a href="#https://make.supercell.com/en/"><img src="images/make.png" alt="Supercell" width= "36"></a>
+					<a href="Sign In.html"><img src="images/id.png" alt="Supercell ID" width= "36"></a>
+					<a style="margin-top: 5px;"><img src="images/search.png" alt="search" width= "20"></a>
 					<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 						<section class="icon_creation"></section>
 						<section class="icon_creation"></section>
