--- a/Our Offices.html
+++ b/Our Offices.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,91 +9,92 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+		<style>
+			@media screen and (max-width:576px) {
+				.hero_txt{
+					top: 20%;
+				}
+				.hero_txt h1{
+					font-size: 25px;
+				}
+				.hero_txt p{
+					font-size: 12px;
+				}
+				.des_container{
+					padding: 15px;
+					font-size: 20px;
+				}
+				.des_container p{
+					font-size: 20px;
+				}
+				.office_locations{
+					font-size: 17px;
+					gap:10px;
+					padding: 0 29px;
+				}
+				#location h1 #open_positions h2{
+					font-size: 30px;
+				}
+				#location h2{
+					font-size: 20px;
+				}
+				.vid_container iframe{
+					width: 100%;
+					height:70vh
+				}
+				.img_container, .img_container2{
+					gap: 24px;
+					margin: 0;
+				}
+				.img_1 img, .img_2 img,.img_3 img, .img_4 img, .img_5 img{
+					width: 100%;
+				}
+				.img_container, .img_container2{
+					flex-direction: column;
+				}
+				.img_container{
+					margin-bottom: 24px;
+				}
+				
+				.img_4, .img_5{
+					padding: 0;
+				}
+	
+				.career_category,.career_position{
+					display: none;
+				}
+	
+				  .legal{
+					flex-direction: column;
+				  }
+				.footer_nav_options{
+					align-items: start;
+					flex-direction: column;
+				}
+				.chat-button{
+					right: -150px;
+				}
+				.chat-button img{
+					width: 20%;
+				}
+			}
+		  </style>
       </head>
-	  <style>
-		@media screen and (max-width:576px) {
-			.hero_txt{
-				top: 20%;
-			}
-			.hero_txt h1{
-				font-size: 25px;
-			}
-			.hero_txt p{
-				font-size: 12px;
-			}
-			.des_container{
-				padding: 15px;
-				font-size: 20px;
-			}
-			.des_container p{
-				font-size: 20px;
-			}
-			.office_locations{
-				font-size: 17px;
-				gap:10px;
-				padding: 0 29px;
-			}
-			#location h1 #open_positions h2{
-				font-size: 30px;
-			}
-			#location h2{
-				font-size: 20px;
-			}
-			.vid_container iframe{
-				width: 100%;
-				height:70vh
-			}
-			.img_container, .img_container2{
-				gap: 24px;
-				margin: 0;
-			}
-			.img_1 img, .img_2 img,.img_3 img, .img_4 img, .img_5 img{
-				width: 100%;
-			}
-			.img_container, .img_container2{
-				flex-direction: column;
-			}
-			.img_container{
-				margin-bottom: 24px;
-			}
-			
-			.img_4, .img_5{
-				padding: 0;
-			}
-
-			.career_category,.career_position{
-				display: none;
-			}
-
-		  	.legal{
-            	flex-direction: column;
-          	}
-			.footer_nav_options{
-				align-items: start;
-				flex-direction: column;
-			}
-			.chat-button{
-				right: -150px;
-			}
-			.chat-button img{
-				width: 20%;
-			}
-		}
-	  </style>
+	  
     <body>
         <header>
             <section class="nav_bar">
-				<a href="/index.html"><img src="images/supercell-logo-white-transp.png" alt="Supercell" width= "74"></a>
+				<a href="index.html"><img src="images/supercell-logo-white-transp.png" alt="Supercell" width= "74"></a>
 				<section class="header_nav_options" id="header_nav">
 					<a href="Games.html" class="header_options">Games</a>
 					<a href="Support.html" class="header_options">Support</a>
-					<a href="About Us.html"class="header_options">About Us</a>
-					<a href="Our Offices.html"class="header_options">Work With Us</a>
+					<a href="About Us.html" class="header_options">About Us</a>
+					<a href="Our Offices.html" class="header_options">Work With Us</a>
 
-					<a href="#https://creators.supercell.com/en" ><img src="images/creators.png" alt="Supercell"  width= "36px" id="section_divider"></a>
-					<a href="#https://make.supercell.com/en/"><img src="images/make.png" alt="Supercell" width= "36px"></a>
-					<a href="Sign In.html"><img src="images/id.png" alt="Supercell ID" width= "36px"></a>
-					<a style="margin-top: 5px;"><img src="images/search.png" alt="search" width= "20px"></a>
+					<a href="#https://creators.supercell.com/en" ><img src="images/creators.png" alt="Supercell"  width= "36" id="section_divider"></a>
+					<a href="#https://make.supercell.com/en/"><img src="images/make.png" alt="Supercell" width= "36"></a>
+					<a href="Sign In.html"><img src="images/id.png" alt="Supercell ID" width= "36"></a>
+					<a style="margin-top: 5px;"><img src="images/search.png" alt="search" width= "20"></a>
 					<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 						<section class="icon_creation"></section>
 						<section class="icon_creation"></section>
