--- a/Support.html
+++ b/Support.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,85 +9,86 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    </head>
-    <style>
-        .hero_txt{
-            top: 70%;
-        }
-        .support_sections{
-            display: flex;
-            flex-direction: row;
-            width:100%;
-            margin-bottom: 10em;
-        }
-        #support_hero{
-            padding-bottom: 10px;
-        }
-        .support_container{
-            text-align: center;
-            margin: 0 10vw;
-        }
-        .support_container h2{
-            color: #000;
-        }
-        .support_container h3{
-            font-size: 2em;
-        }
-        @media screen and (max-width:576px) {
-			.hero_txt{
-				top: 35%;
-			}
-			.hero_txt h1{
-				font-size: 25px;
-			}
-			.hero_txt p{
-				font-size: 12px;
-			}
+        <style>
+            .hero_txt{
+                top: 70%;
+            }
+            .support_sections{
+                display: flex;
+                flex-direction: row;
+                width:100%;
+                margin-bottom: 10em;
+            }
+            #support_hero{
+                padding-bottom: 10px;
+            }
             .support_container{
-                margin: 0 2vw;
+                text-align: center;
+                margin: 0 10vw;
             }
             .support_container h2{
-                font-size: 30px;
+                color: #000;
             }
             .support_container h3{
-                font-size: 20px;
+                font-size: 2em;
             }
-            .legal{
-				flex-direction: column;
-			}
-			.footer_nav_options{
-				align-items: start;
-				flex-direction: column;
-			}
-			.chat-button{
-				right: -150px;
-			}
-			.chat-button img{
-				width: 20%;
-			}
-            .vid_container iframe{
-                width: 100%;
-                height:80vh
+            @media screen and (max-width:576px) {
+                .hero_txt{
+                    top: 35%;
+                }
+                .hero_txt h1{
+                    font-size: 25px;
+                }
+                .hero_txt p{
+                    font-size: 12px;
+                }
+                .support_container{
+                    margin: 0 2vw;
+                }
+                .support_container h2{
+                    font-size: 30px;
+                }
+                .support_container h3{
+                    font-size: 20px;
+                }
+                .legal{
+                    flex-direction: column;
+                }
+                .footer_nav_options{
+                    align-items: start;
+                    flex-direction: column;
+                }
+                .chat-button{
+                    right: -150px;
+                }
+                .chat-button img{
+                    width: 20%;
+                }
+                .vid_container iframe{
+                    width: 100%;
+                    height:80vh
+                }
+                .vid_container{
+                    margin-bottom: -5px;
+                }
             }
-            .vid_container{
-                margin-bottom: -5px;
-            }
-        }
-    </style>
+        </style>
+    </head>
+    
     <body>
         <header>
             <section class="nav_bar">
-				<a href="/index.html"><img src="images/supercell-logo-white-transp.png" alt="Supercell" width= "74"></a>
+				<a href="index.html"><img src="images/supercell-logo-white-transp.png" alt="Supercell" width= "74"></a>
 				<section class="header_nav_options" id="header_nav">
 					<a href="Games.html" class="header_options">Games</a>
 					<a href="Support.html" class="header_options">Support</a>
-					<a href="About Us.html"class="header_options">About Us</a>
-					<a href="Our Offices.html"class="header_options">Work With Us</a>
+					<a href="About Us.html" class="header_options">About Us</a>
+					<a href="Our Offices.html" class="header_options">Work With Us</a>
 
-					<a href="#https://creators.supercell.com/en" ><img src="images/creators.png" alt="Supercell"  width= "36px" id="section_divider"></a>
-					<a href="#https://make.supercell.com/en/"><img src="images/make.png" alt="Supercell" width= "36px"></a>
-					<a href="Sign In.html"><img src="images/id.png" alt="Supercell ID" width= "36px"></a>
-					<a style="margin-top: 5px;"><img src="images/search.png" alt="search" width= "20px"></a>
+					<a href="#https://creators.supercell.com/en" ><img src="images/creators.png" alt="Supercell"  width= "36" id="section_divider"></a>
+					<a href="#https://make.supercell.com/en/"><img src="images/make.png" alt="Supercell" width= "36"></a>
+					<a href="Sign In.html"><img src="images/id.png" alt="Supercell ID" width= "36"></a>
+					<a style="margin-top: 5px;"><img src="images/search.png" alt="search" width= "20"></a>
 					<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 						<section class="icon_creation"></section>
 						<section class="icon_creation"></section>
